# ChangeLog for www-client/opera
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.319 2009/02/11 19:33:21 jer Exp $

  11 Feb 2009; Jeroen Roovers <jer@gentoo.org>
  opera-10.00_pre4126-r1.ebuild:
  Look mom, I can do spell checking without aspell!

*opera-10.00_pre4126-r1 (11 Feb 2009)

  11 Feb 2009; Jeroen Roovers <jer@gentoo.org>
  +opera-10.00_pre4126-r1.ebuild:
  Correct spellcheck.so location in spellcheck.ini thanks to MageSlayer (bug
  #258198). Die when spellcheck.so is not found. Refer to LINGUAS for
  >app-text/aspell-0.60.5.

  04 Feb 2009; Jeroen Roovers <jer@gentoo.org> opera-10.00_pre4126.ebuild:
  Depend on media-libs/libpng thanks to Constantine D. Kardaris (bug
  #257437).

*opera-10.00_pre4126 (13 Jan 2009)

  13 Jan 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.00_pre4126.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/01/13/new-year-snapshot>.

  30 Dec 2008; Jeroen Roovers <jer@gentoo.org> opera-10.00_pre4116.ebuild:
  Depend on Qt 4 instead of 3 (bug #252630).

*opera-10.00_pre4116 (24 Dec 2008)

  24 Dec 2008; Jeroen Roovers <jer@gentoo.org> +opera-10.00_pre4116.ebuild:
  Cleaned up ebuild and version bump
  <http://my.opera.com/desktopteam/blog/2008/12/19/the-christmas-edition>.

  20 Dec 2008; Jeroen Roovers <jer@gentoo.org> -opera-9.62.ebuild:
  Remove old.

  20 Dec 2008; Markus Meier <maekke@gentoo.org> opera-9.63.ebuild:
  x86 stable, bug #247229

  18 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> opera-9.63.ebuild:
  ppc stable, bug #247229

  16 Dec 2008; Kenneth Prugh <ken69267@gentoo.org> opera-9.63.ebuild:
  amd64 stable, bug #247229

*opera-9.63 (16 Dec 2008)

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.63.ebuild:
  Version bump (bug #251155).

  06 Dec 2008; Jeroen Roovers <jer@gentoo.org> opera-10.00_pre4102.ebuild:
  Hopefully fix bug #249964.

*opera-10.00_pre4102 (05 Dec 2008)
