@@ -1,6 +1,10 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.319 2009/02/11 19:33:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.320 2009/02/11 19:48:06 jer Exp $
+
+  11 Feb 2009; Jeroen Roovers <jer@gentoo.org>
+  opera-10.00_pre4126-r1.ebuild:
+  I can even do spell checking without spellcheck.ini.
 
   11 Feb 2009; Jeroen Roovers <jer@gentoo.org>
   opera-10.00_pre4126-r1.ebuild:
